--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Online Shop</title>
+    <title>SiniBeli</title>
 </head>
 <body>
-    
+    <div class="header"> 
+        <h5> Name: </h5>
+        <p>Muhammad Radhiya Arshq</p>
+        <!-- <p>{{nama}}</p> -->
+        <h5> NPM: </h5>
+        <p>2306275885</p>
+        <!-- <p>{{npm}}</p> -->
+        <h5>Class: </h5>
+        <p>PBP D</p>
+        <!-- <p>{{kelas}}</p> -->
+    </div>
+    <div class="intro">
+        <div class="app-info">
+            <h1>SiniBeli</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Porro obcaecati dolor, enim debitis harum dolorem modi laboriosam consequatur assumenda hic quibusdam, 
+                adipisci corporis reiciendis deserunt perspiciatis? Officia dignissimos iure voluptate.</p>
+            <!-- <h1>{{app_name}}</h1>
+            <p>{{app_desc}}</p> -->
+        </div>
+    </div>
+    <div class="product-container">
+        <div class="container-box">
+            <div class="box">
+                <img class="product-pic" src=""> 
+                <p> Iphone 15 </p>
+                <p> Price : Rp15000000 </p>
+                <p> Description : HP baru & Mahal</p>
+            </div>
+            <div class="box">
+                <img class="product-pic" src=""> 
+                <p> Laptop Asus ROG Zephyrus </p>
+                <p> Price : Rp18500000 </p>
+                <p> Description : Laptop bisa buat gaming + kuliah</p>
+            </div>
+            <div class="box">
+                <img class="product-pic" src=""> 
+                <p> Sony Noise-Cancelling Headphones </p>
+                <p> Price : Rp3000000 </p>
+                <p> Description : Headphone noise cancelling biar hidup tenang</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
