--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -49,5 +49,93 @@
             </div>
         </div>
     </div>
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: honeydew;
+        }
+
+        .header{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            padding: 8px;
+            padding-top: 0;
+            padding-bottom: 0;
+            gap: 1vh;
+            background-color: rgb(130, 163, 71);
+            border: 2px solid black;
+        }
+
+        #header-info{
+            display: flex;
+            flex-direction: row;
+            margin: 10px;
+            gap: 1rem;
+        }
+
+        .intro{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-self: center;
+            flex-wrap: wrap;
+            padding: 32px 0;
+            background-color: honeydew;
+            width: 100%;
+        }
+
+        .intro h1{
+            text-align: center;
+            font-size: 50px;
+        }
+
+        .app-info{
+            padding: 5px;
+            width: 600px;
+        }
+
+        .product-container{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-self: center;
+            width: 100%;
+            text-align: center;
+            background-color: rgb(133, 146, 109);
+            border: 2px solid black
+        }
+
+        .container-box{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-self: center;
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+
+        .box{
+            display: block;
+            width: 200px;
+            text-align: left;
+            margin: 10px;
+            padding: 8px;
+            border: 2px solid black;
+            border-radius: 20px;
+            background-color: aliceblue;
+        }
+
+        .box img{
+            height: 180px;
+            width: 196px;
+            border-radius: 20px;
+        }
+    </style>
 </body>
 </html>
