--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css'%}">
     <title>SiniBeli</title>
 </head>
 <body>
@@ -30,112 +31,24 @@
         <h2>Product</h2>
         <div class="container-box">
             <div class="box">
-                <img class="product-pic" src="img/iphone2.jpeg"> 
+                <img class="product-pic" src="{% static 'img/iphone2.jpeg' %}"> 
                 <p style="text-align: center;"> {{product_name1}} </p>
                 <p> Price : Rp{{price1}}.00 </p>
                 <p> Description : {{description1}}</p>
             </div>
             <div class="box">
-                <img class="product-pic" src="img/asus2.png"> 
+                <img class="product-pic" src= "{% static 'img/asus2.png' %}"> 
                 <p style="text-align: center;"> {{product_name2}} </p>
                 <p> Price : Rp{{price2}}.00 </p>
                 <p> Description : {{description2}}</p>
             </div>
             <div class="box">
-                <img class="product-pic" src="img/headphone.webp"> 
+                <img class="product-pic" src= "{% static 'img/headphone.webp' %}" > 
                 <p style="text-align: center;"> {{product_name3}} </p>
                 <p> Price : Rp{{price3}}.00 </p>
                 <p> Description : {{description3}}</p>
             </div>
         </div>
     </div>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: honeydew;
-        }
-
-        .header{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            padding: 8px;
-            padding-top: 0;
-            padding-bottom: 0;
-            gap: 1vh;
-            background-color: rgb(130, 163, 71);
-            border: 2px solid black;
-        }
-
-        #header-info{
-            display: flex;
-            flex-direction: row;
-            margin: 10px;
-            gap: 1rem;
-        }
-
-        .intro{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-self: center;
-            flex-wrap: wrap;
-            padding: 32px 0;
-            background-color: honeydew;
-            width: 100%;
-        }
-
-        .intro h1{
-            text-align: center;
-            font-size: 50px;
-        }
-
-        .app-info{
-            padding: 5px;
-            width: 600px;
-        }
-
-        .product-container{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-self: center;
-            width: 100%;
-            text-align: center;
-            background-color: rgb(133, 146, 109);
-            border: 2px solid black
-        }
-
-        .container-box{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-self: center;
-            flex-wrap: wrap;
-            gap: 1rem;
-        }
-
-        .box{
-            display: block;
-            width: 200px;
-            text-align: left;
-            margin: 10px;
-            padding: 8px;
-            border: 2px solid black;
-            border-radius: 20px;
-            background-color: aliceblue;
-        }
-
-        .box img{
-            height: 180px;
-            width: 196px;
-            border-radius: 20px;
-        }
-    </style>
 </body>
 </html>
