added templates folder in base directory & updated templates in main

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -6,6 +6,8 @@
     <title>SiniBeli</title>
 </head>
 <body>
+    {% extends 'base.html' %}
+    {% block content %}
     <div class="header"> 
         <div id="header-info">
             <h5> Name: </h5>
@@ -139,5 +141,6 @@
             border-radius: 20px;
         }
     </style>
+    {% endblock content %}
 </body>
 </html>
