--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Add Product</title>
 </head>
 <body>
     {% extends 'base.html' %} 
     {% block content %}
-    <h1>Add New Mood Entry</h1>
+    <h1>Add New Product</h1>
 
     <form method="POST">
         {% csrf_token %}
