--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -8,21 +8,116 @@
 <body>
     {% extends 'base.html' %} 
     {% block content %}
-    <h1>Add New Product</h1>
+    <div class="header"> 
+        <div id="header-info">
+            <h5> Name: </h5>
+            <h5>{{nama}}</h5>
+        </div>
+        <div id="header-info">
+            <h5> NPM: </h5>
+            <h5>{{npm}}</h5>
+        </div>
+        <div id="header-info">
+            <h5>Class: </h5>
+            <h5>{{kelas}}</h5>
+        </div>
+    </div>
+    <div class="form-container">
+        <h1>Add New Product</h1>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="table">
+                <table>
+                    {{ form.as_table }}
+                    <tr>
+                    <td></td>
+                    <td>
+                        <div class="add-button">
+                            <input type="submit" value="Add Product" />
+                        </div>
+                    </td>
+                    </tr>
+                </table>
+            </div>
+        </form>
+    </div>
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: honeydew;
+        }
 
-    <form method="POST">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-            <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Add Product" />
-            </td>
-            </tr>
-        </table>
-    </form>
+        .header{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            padding: 8px;
+            padding-top: 0;
+            padding-bottom: 0;
+            gap: 1vh;
+            background-color: rgb(130, 163, 71);
+            box-shadow: 0 5px #666;
+        }
 
+        #header-info{
+            display: flex;
+            flex-direction: row;
+            margin: 10px;
+            gap: 1rem;
+        }
+
+        .form-container{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            align-items: center;
+            margin: 10px;
+            padding: 8px;
+        }
+
+        .form-container h1{
+            text-align: center;
+        }
+
+        .table{
+            display: flex;
+            justify-content: center;
+            padding: 16px;
+            border: 2px solid black;
+            border-radius: 20px;
+            background-color: rgb(133, 146, 109);
+            box-shadow: 0 5px #666;
+        }
+
+        input{
+            border: 2px solid black;
+            border-radius: 40px;
+            padding: 8px;
+        }
+
+        .add-button input{
+            font-size: large;
+            border-radius: 10px;
+            padding: 10px ;
+            box-shadow: 0 5px #666;
+            transition-duration: 0.4s;
+        }
+
+        .add-button input:hover{
+            color: aliceblue;
+            background-color: rgb(145, 181, 83);
+        }
+
+        .add-button input:active{
+            box-shadow: 0 5px #666;
+            transform: translateY(5px);
+        }
+    </style>
     {% endblock %}
 </body>
 </html>
