--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -29,25 +29,24 @@
     </div>
     <div class="product-container">
         <h2>Product</h2>
+        {% if not product_entries %}
+        <h3>No Product Available</h3>
+        {% else %}
         <div class="container-box">
+            {% for product in product_entries %}
             <div class="box">
-                <img class="product-pic" src="https://i.imgur.com/1WKsoAZ.jpeg"> 
-                <p style="text-align: center;"> {{product_name1}} </p>
-                <p> Price : Rp{{price1}}.00 </p>
-                <p> Description : {{description1}}</p>
+                <!-- <img class="product-pic" src="https://i.imgur.com/1WKsoAZ.jpeg">  -->
+                <p style="text-align: center;"> {{product.name}} </p>
+                <p> Price : Rp{{product.price}}.00 </p>
+                <p> Description : {{product.description}}</p>
             </div>
-            <div class="box">
-                <img class="product-pic" src= "https://i.imgur.com/ZyW0U9s.png"> 
-                <p style="text-align: center;"> {{product_name2}} </p>
-                <p> Price : Rp{{price2}}.00 </p>
-                <p> Description : {{description2}}</p>
-            </div>
-            <div class="box">
-                <img class="product-pic" src= "https://i.imgur.com/5kyR7Tw.jpeg" > 
-                <p style="text-align: center;"> {{product_name3}} </p>
-                <p> Price : Rp{{price3}}.00 </p>
-                <p> Description : {{description3}}</p>
-            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+        <div>
+            <a href="{% url 'main:create_product_entry' %}">
+                <button>Add New Product</button>
+            </a>
         </div>
     </div>
     <style>
@@ -70,7 +69,7 @@
             padding-bottom: 0;
             gap: 1vh;
             background-color: rgb(130, 163, 71);
-            border: 2px solid black;
+            box-shadow: 0 5px #666;
         }
 
         #header-info{
@@ -104,9 +103,9 @@
         .product-container{
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-self: center;
             width: 100%;
+            min-height: 50vh;
             text-align: center;
             background-color: rgb(133, 146, 109);
             border: 2px solid black
