--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -32,9 +32,7 @@
                     <tr>
                     <td></td>
                     <td>
-                        <div class="add-button">
-                            <input type="submit" value="Add Product" />
-                        </div>
+                        <input class="add-button" type="submit" value="Add Product" />
                     </td>
                     </tr>
                 </table>
@@ -100,7 +98,7 @@
             padding: 8px;
         }
 
-        .add-button input{
+        .add-button{
             font-size: large;
             border-radius: 10px;
             padding: 10px ;
@@ -108,12 +106,12 @@
             transition-duration: 0.4s;
         }
 
-        .add-button input:hover{
+        .add-button:hover{
             color: aliceblue;
             background-color: rgb(145, 181, 83);
         }
 
-        .add-button input:active{
+        .add-button:active{
             box-shadow: 0 5px #666;
             transform: translateY(5px);
         }
