--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -11,15 +11,15 @@
     <div class="header"> 
         <div id="header-info">
             <h5> Name: </h5>
-            <h5>{{nama}}</h5>
+            <h5>Muhammad Radhiya Arshq</h5>
         </div>
         <div id="header-info">
             <h5> NPM: </h5>
-            <h5>{{npm}}</h5>
+            <h5>2306275885</h5>
         </div>
         <div id="header-info">
             <h5>Class: </h5>
-            <h5>{{kelas}}</h5>
+            <h5>PBP D</h5>
         </div>
     </div>
     <div class="form-container">
