--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -139,6 +139,7 @@
         padding: 10px ;
         box-shadow: 0 5px #666;
         transition-duration: 0.4s;
+        margin: 16px;
     }
 
     .add-product button:hover{
