--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -85,7 +85,7 @@
         box-shadow: 0 5px #666;
     }
 
-    input{
+    input[type=text], input[type=number]  {
         border: 2px solid black;
         border-radius: 40px;
         padding: 8px;
