--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -17,7 +17,7 @@
 </div>
 <div class="form-container">
     <h1>Add New Product</h1>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="table">
             <table>
