--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -44,6 +44,13 @@
             </div>
         </a>
     </div>
+    <div>
+        <a href="{% url 'main:logout' %}"> <!-- mengarah ke URL secara dinamis berdasarkan app_name dan name -->
+            <div class="logout">
+                <button>Logout</button>
+            </div>
+        </a>
+    </div>
 </div>
 <style>
     body {
