--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -6,18 +6,20 @@
 
 {% block content %}
 
-<div class="login">
-    <h1>Register</h1>
+<div class="register">
+    <h1 style="font-size: 50px;">Register</h1>
 
     <form method="POST">
         {% csrf_token %}
-        <table>
-        {{ form.as_table }} <!-- untuk memudahkan membuat form yang berbentuk tabel -->
-        <tr>
-            <td></td>
-            <td><input type="submit" name="submit" value="Daftar" /></td>
-        </tr>
-        </table>
+        <div class="register-table">
+            <table>
+            {{ form.as_table }} <!-- untuk memudahkan membuat form yang berbentuk tabel -->
+            <tr>
+                <td></td>
+                <td><input class="submit" type="submit" name="submit" value="Daftar" /></td>
+            </tr>
+            </table>
+        </div>
     </form>
 
     {% if messages %}
@@ -28,5 +30,62 @@
     </ul>
     {% endif %}
 </div>
+<style>
+    body {
+        margin: 20px;
+        display: flex;
+        flex-direction: column;
+        min-height: 50vh;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        background-color: honeydew;
+    }
+
+    .register{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 10px;
+        padding: 8px;
+    }
+
+    .register-table{
+        display: flex;
+        justify-content: center;
+        padding: 16px;
+        border: 2px solid black;
+        border-radius: 20px;
+        background-color: rgb(133, 146, 109);
+        box-shadow: 0 5px #666;
+    }
+
+    input[type=text], input[type=password] {
+        border: 2px solid black;
+        border-radius: 40px;
+        padding: 8px;
+        box-shadow: 0 3px #666;
+    }
+
+    .submit{
+        font-size: large;
+        border-radius: 10px;
+        padding: 5px ;
+        box-shadow: 0 5px #666;
+        transition-duration: 0.4s;
+    }
+
+    .submit:hover{
+        color: aliceblue;
+        background-color: rgb(145, 181, 83);
+    }
+
+    .submit:active{
+        box-shadow: 0 5px #666;
+        transform: translateY(5px);
+    }
+
+
+
+</style>
 
 {% endblock content %}
