--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -35,7 +35,7 @@
 </ul>
 {% endif %} 
 
-<style>
+<!-- <style>
     body {
         margin: 0;
         display: flex;
@@ -105,5 +105,5 @@
         box-shadow: 0 5px #666;
         transform: translateY(5px);
     }
-</style>
+</style> -->
 {% endblock content %}
