--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -30,7 +30,7 @@
     </ul>
     {% endif %}
 </div>
-<style>
+<!-- <style>
     body {
         margin: 20px;
         display: flex;
@@ -86,6 +86,6 @@
 
 
 
-</style>
+</style> -->
 
 {% endblock content %}
