--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,7 +1,8 @@
 
 {% extends 'base.html' %} 
 {% block content %}
-<div class="header"> 
+{% include 'navbar.html' %}
+<!-- <div class="header"> 
     <div id="header-info">
         <h5> Name: </h5>
         <h5>Muhammad Radhiya Arshq</h5>
@@ -14,7 +15,7 @@
         <h5>Class: </h5>
         <h5>PBP D</h5>
     </div>
-</div>
+</div> -->
 <div class="form-container">
     <h1>Add New Product</h1>
     <form method="POST" enctype="multipart/form-data">
@@ -32,7 +33,7 @@
         </div>
     </form>
 </div>
-<style>
+<!-- <style>
     body {
         margin: 0;
         display: flex;
@@ -40,26 +41,6 @@
         min-height: 100vh;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         background-color: honeydew;
-    }
-
-    .header{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 8px;
-        padding-top: 0;
-        padding-bottom: 0;
-        gap: 1vh;
-        background-color: rgb(130, 163, 71);
-        box-shadow: 0 5px #666;
-    }
-
-    #header-info{
-        display: flex;
-        flex-direction: row;
-        margin: 10px;
-        gap: 1rem;
     }
 
     .form-container{
@@ -108,5 +89,5 @@
         box-shadow: 0 5px #666;
         transform: translateY(5px);
     }
-</style>
+</style> -->
 {% endblock %}
