--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,19 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="header"> 
-    <div id="header-info">
-        <h5> Name: </h5>
-        <h5>{{nama}}</h5>
-    </div>
-    <div id="header-info">
-        <h5> NPM: </h5>
-        <h5>{{npm}}</h5>
-    </div>
-    <div id="header-info">
-        <h5>Class: </h5>
-        <h5>{{kelas}}</h5>
-    </div>
-</div>
+{% include 'navbar.html' %}
 <div class="intro">
     <div class="app-info">
         <h1>{{app_intro}}</h1>
@@ -71,26 +58,6 @@
         min-height: 100vh;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         background-color: honeydew;
-    }
-
-    .header{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 8px;
-        padding-top: 0;
-        padding-bottom: 0;
-        gap: 1vh;
-        background-color: rgb(130, 163, 71);
-        box-shadow: 0 5px #666;
-    }
-
-    #header-info{
-        display: flex;
-        flex-direction: row;
-        margin: 10px;
-        gap: 1rem;
     }
 
     .intro{
