--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <title>SiniBeli</title>
     {% endblock meta %}
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
 </head>
 
 <body>
