--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -5,105 +5,68 @@
 {% endblock meta %}
 
 {% block content %}
-<div class="login">
-    <h1>SiniBeli</h1>
-    <div class="login-container">
-        <h1>Login</h1>
-        
-        <form method="POST" action="">
-            {% csrf_token %}
-            <div class="login-table">
-                <table>
-                {{ form.as_table }}
-                <tr>
-                    <td></td>
-                    <td><input class="login-btn" type="submit" value="Login" /></td>
-                </tr>
-                </table>
-            </div>
-        </form>
+<div class="min-h-screen flex flex-col items-center justify-center w-screen bg-yellow-100 py-12 px-4 sm:px-6 lg:px-8">
+   <div class="mb-8 text-center">
+    <h1 class="mt-6 text-center text-black text-5xl font-extrabold text-gray-900">
+    SiniBeli
+    </h1>
+   </div>
+
+  <div class="border-black rounded-lg border-2 shadow-lg p-8 max-w-md w-full space-y-10">
+    <div>
+      <h2 class="mt-6 text-center text-black text-3xl font-extrabold text-gray-900">
+        Login to your account
+      </h2>
     </div>
+    <form class="mt-8 space-y-6" method="POST" action="">
+      {% csrf_token %}
+      <input type="hidden" name="remember" value="true">
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <label for="username" class="block mb-2 text-sm font-medium text-gray-900 text-black">Username</label>
+          <input id="username" name="username" type="text" required class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500" placeholder="Username">
+        </div>
+        <div>
+          <label for="password" class="block mb-2 text-sm font-medium text-gray-900 text-black pt-2">Password</label>
+          <input id="password" name="password" type="password" required class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500" placeholder="Password">
+        </div>
+      </div>
 
-    <p> Don't have an account yet? <a href="{% url 'main:register' %}">Register Now</a></p>
+      <div>
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 ">
+          Sign in
+        </button>
+      </div>
+    </form>
+
+    {% if messages %}
+    <div class="mt-4">
+      {% for message in messages %}
+      {% if message.tags == "success" %}
+            <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
+                <span class="block sm:inline">{{ message }}</span>
+            </div>
+        {% elif message.tags == "error" %}
+            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                <span class="block sm:inline">{{ message }}</span>
+            </div>
+        {% else %}
+            <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
+                <span class="block sm:inline">{{ message }}</span>
+            </div>
+        {% endif %}
+      {% endfor %}
+    </div>
+    {% endif %}
+
+    <div class="text-center mt-4">
+      <p class="text-sm text-black">
+        Don't have an account yet?
+        <a href="{% url 'main:register' %}" class="font-medium text-green-400 hover:text-blue-300">
+          Register Now
+        </a>
+      </p>
+    </div>
+  </div>
 </div>
-
-{% if messages %}
-<ul>
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %} 
-
-<!-- <style>
-    body {
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        background-color: honeydew;
-    }
-
-    .login{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-items: center;
-        margin: 10px;
-        padding: 8px;
-    }
-
-    .login h1{
-        text-align: center;
-        font-size: 50px;
-    }
-
-    .login-table label{
-        font-size: larger;
-    }
-
-    .login-container{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-items: center;
-        padding: 8px;
-    }
-
-    .login-table{
-        display: flex;
-        justify-content: center;
-        padding: 16px;
-        border: 2px solid black;
-        border-radius: 20px;
-        background-color: rgb(133, 146, 109);
-        box-shadow: 0 5px #666;
-    }
-
-    input[type=text], input[type=password] {
-        border: 2px solid black;
-        border-radius: 40px;
-        padding: 8px;
-        box-shadow: 0 3px #666;
-    }
-
-    .login-btn{
-        font-size: large;
-        border-radius: 10px;
-        padding: 5px ;
-        box-shadow: 0 5px #666;
-        transition-duration: 0.4s;
-    }
-
-    .login-btn:hover{
-        color: aliceblue;
-        background-color: rgb(145, 181, 83);
-    }
-
-    .login-btn:active{
-        box-shadow: 0 5px #666;
-        transform: translateY(5px);
-    }
-</style> -->
 {% endblock content %}
