--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -24,11 +24,11 @@
       <div class="rounded-md shadow-sm -space-y-px">
         <div>
           <label for="username" class="block mb-2 text-sm font-medium text-gray-900 text-black">Username</label>
-          <input id="username" name="username" type="text" required class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500" placeholder="Username">
+          <input id="username" name="username" type="text" required class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-4 focus:outline-offset-0 focus:ring-green-500 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500" placeholder="Username">
         </div>
         <div>
           <label for="password" class="block mb-2 text-sm font-medium text-gray-900 text-black pt-2">Password</label>
-          <input id="password" name="password" type="password" required class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500" placeholder="Password">
+          <input id="password" name="password" type="password" required class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-4 focus:outline-offset-0 focus:ring-green-500 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500" placeholder="Password">
         </div>
       </div>
 
