--- a/static/css/global.css
+++ b/static/css/global.css
@@ -6,8 +6,8 @@
 }
 .form-style form input:focus, form textarea:focus, form select:focus {
     outline: none;
-    border-color: #674ea7;
-    box-shadow: 0 0 0 3px #674ea7;
+    border-color: rgb(162, 192, 108);
+    box-shadow: 0 0 0 2px rgb(162, 192, 108);
 }
 @keyframes shine {
     0% { background-position: -200% 0; }
