--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -1,23 +1,42 @@
 {% extends 'base.html' %}
-
 {% load static %}
+{% block meta %}
+<title>Edit Product</title>
+{% endblock meta %}
 
 {% block content %}
 {% include 'navbar.html' %}
+<div class="flex flex-col min-h-screen bg-gradient-to-r from-yellow-200 via-emerald-300 to-blue-200">
+    <div class="container mx-auto px-4 py-4 mt-4 max-w-xl">
+        <h1 class="mt-6 text-center text-black text-5xl font-extrabold text-gray-900 mb-8">Edit Product Data</h1>
 
-<h1>Edit Mood</h1>
-
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Edit Product"/>
-            </td>
-        </tr>
-    </table>
-</form>
-
+        <div class="bg-gray-800 shadow-md rounded-lg p-6 form-style">
+            <form method="POST" class="space-y-6" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in form %}
+                <div class="flex flex-col">
+                    <label for="{{ field.id_for_label }}" class="mb-2 font-semibold text-gray-100">
+                        {{ field.label }}
+                    </label>
+                    <div class="w-full">
+                        {{ field }}
+                    </div>
+                    {% if field.help_text %}
+                    <p class="mt-1 text-sm text-gray-100">{{ field.help_text }}</p>
+                    {% endif %}
+                    {% for error in field.errors %}
+                    <p class="mt-1 text-sm text-red-600">{{ error }}</p>
+                    {% endfor %}
+                </div>
+                {% endfor %}
+                <div class="flex justify-center mt-6">
+                    <button type="submit"
+                        class="bg-lime-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-lime-700 transition duration-300 ease-in-out w-full">
+                        Edit Product
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
