--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -6,67 +6,74 @@
 
 {% block content %}
 <div class="min-h-screen flex flex-col items-center justify-center w-screen bg-yellow-100 py-12 px-4 sm:px-6 lg:px-8">
-   <div class="mb-8 text-center">
-    <h1 class="mt-6 text-center text-black text-5xl font-extrabold text-gray-900">
-    SiniBeli
-    </h1>
-   </div>
-
-  <div class="border-black rounded-lg border-2 shadow-lg p-8 max-w-md w-full space-y-10">
-    <div>
-      <h2 class="mt-6 text-center text-black text-3xl font-extrabold text-gray-900">
-        Login to your account
-      </h2>
+    <div class="mb-8 text-center">
+        <h1 class="mt-6 text-center text-black text-5xl font-extrabold text-gray-900">
+            SiniBeli
+        </h1>
     </div>
-    <form class="mt-8 space-y-6" method="POST" action="">
-      {% csrf_token %}
-      <input type="hidden" name="remember" value="true">
-      <div class="rounded-md shadow-sm -space-y-px">
-        <div>
-          <label for="username" class="block mb-2 text-sm font-medium text-gray-900 text-black">Username</label>
-          <input id="username" name="username" type="text" required class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-4 focus:outline-offset-0 focus:ring-green-500 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500" placeholder="Username">
-        </div>
-        <div>
-          <label for="password" class="block mb-2 text-sm font-medium text-gray-900 text-black pt-2">Password</label>
-          <input id="password" name="password" type="password" required class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-4 focus:outline-offset-0 focus:ring-green-500 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500" placeholder="Password">
-        </div>
-      </div>
 
-      <div>
-        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 ">
-          Sign in
-        </button>
-      </div>
-    </form>
+    <div class="border-black rounded-lg border-2 shadow-lg p-8 max-w-md w-full space-y-10">
+        <div>
+            <h2 class="mt-6 text-center text-black text-3xl font-extrabold text-gray-900">
+                Login to your account
+            </h2>
+        </div>
+        <form class="mt-8 space-y-6" method="POST" action="">
+            {% csrf_token %}
+            <input type="hidden" name="remember" value="true">
+            <div class="rounded-md shadow-sm -space-y-px">
+                <div>
+                    <label for="username"
+                        class="block mb-2 text-sm font-medium text-gray-900 text-black">Username</label>
+                    <input id="username" name="username" type="text" required
+                        class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-4 focus:outline-offset-0 focus:ring-green-500 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500"
+                        placeholder="Username">
+                </div>
+                <div>
+                    <label for="password"
+                        class="block mb-2 text-sm font-medium text-gray-900 text-black pt-2">Password</label>
+                    <input id="password" name="password" type="password" required
+                        class="bg-white-50 border border-white-300 text-white-900 rounded-lg focus:ring-4 focus:outline-offset-0 focus:ring-green-500 block w-full p-2.5 bg-white-700 border-gray-600 placeholder-gray-400 text-black focus:ring-green-500 focus:border-green-500"
+                        placeholder="Password">
+                </div>
+            </div>
 
-    {% if messages %}
-    <div class="mt-4">
-      {% for message in messages %}
-      {% if message.tags == "success" %}
+            <div>
+                <button type="submit"
+                    class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-lime-600 hover:bg-lime-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 ">
+                    Sign in
+                </button>
+            </div>
+        </form>
+
+        {% if messages %}
+        <div class="mt-4">
+            {% for message in messages %}
+            {% if message.tags == "success" %}
             <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
                 <span class="block sm:inline">{{ message }}</span>
             </div>
-        {% elif message.tags == "error" %}
+            {% elif message.tags == "error" %}
             <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
                 <span class="block sm:inline">{{ message }}</span>
             </div>
-        {% else %}
+            {% else %}
             <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
                 <span class="block sm:inline">{{ message }}</span>
             </div>
+            {% endif %}
+            {% endfor %}
+        </div>
         {% endif %}
-      {% endfor %}
-    </div>
-    {% endif %}
 
-    <div class="text-center mt-4">
-      <p class="text-sm text-black">
-        Don't have an account yet?
-        <a href="{% url 'main:register' %}" class="font-medium text-green-400 hover:text-blue-300">
-          Register Now
-        </a>
-      </p>
+        <div class="text-center mt-4">
+            <p class="text-sm text-black">
+                Don't have an account yet?
+                <a href="{% url 'main:register' %}" class="font-medium text-green-400 hover:text-blue-300">
+                    Register Now
+                </a>
+            </p>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock content %}
