--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,4 +1,4 @@
-.form-style form input, form textarea, form select {
+.form-style form input[type=text], input[type=number], form textarea, form select {
     width: 100%;
     padding: 0.5rem;
     border: 2px solid #bcbcbc;
